[package]
name = "mg-nft"
version = "0.1.0"
authors = ["Epam Inc <hello@nearprotocol.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.0.1"
near-env = "0.1.7"
mg-core = { path = "../mg-core" }

[dev-dependencies]
sha2 = "0.9.3"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mg-core = { path = "../mg-core" }
