
[package]
name = "mg-sim"
version = "0.0.2"
authors = ["EPAM Inc <hello@epam.com>"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "=3.1.0"

near-vm-errors = "4.0.0-pre.1"
near-primitives = "=0.1.0-pre.1"

mg-core = { path = "../mg-core" }
mg-nft = { path = "../mg-nft" }
mg-market = { path = "../mg-market" }
ansi_term = "0.12"
lipsum = "0.7"
